<resources>
    <string name="app_name">Todo</string>
    <string name="menuNewTask">Nova Tarefa</string>

    <string name="taskTitle">Titulo</string>
    <string name="taskDescription">Descrição</string>

    <string name="taskpriority">Prioridade</string>
    <string name="priorityLow">Baixa</string>
    <string name="priorityMedium">Média</string>
    <string name="priorityHigh">Alta</string>

    <string name="save">Salvar</string>
</resources>
